--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "JavaScript-Asincronismo-Proyect",
   "main": "index.js",
   "scripts": {
-    "deploy": "gh-pages -d src"
+    "deploy": "gh-pages -d ./"
   },
   "repository": {
     "type": "git",
